lldpd (0.7.2)
  * Features
    + lldpd can be configured through /etc/lldpd.conf and
      /etc/lldpd.d. All commands accepted by lldpcli are accepted.
    + Lock BPF interfaces before handing them to chrooted process on
      BSD.
    + Limit the number of neighbors for each port to 4 (per protocol).
  * Fixes:
    + Driver whitelisting is done before checking if an interface has
      a lower interface in Linux.
    + Expire remote ports and chassis in a timely manner.

lldpd (0.7.1)
  * Features
    + Mac OS X support, sponsored by Xcloud, Mac cloud server hosting
      provider. http://xcloud.me/
    + Upstart and systemd support.
    + Remove Unix socket when there is no process listening.

lldpd (0.7.0)
  * Global changes:
    + FreeBSD support.
    + OpenBSD support.
    + NetBSD support.
    + Detect interface changes.
    + CLI for lldpctl: lldpcli.
  * Other features:
    + Allow to disable LLDP protocol (with `-ll`). In this case, the
      first enabled protocol will be used when no neighbor is detected.
    + Allow to filter debug logs using tokens. Add more debug logs.
    + lldpctl can now output JSON.
    + Use netlink to gather interface information on Linux.
    + Don't use ioctl for bridges anymore on Linux. The configure
      option `--enable-oldies` allow to reenable their uses for
      systems not supporting sysfs.

lldpd (0.6.1)
  * Features:
    + Provide liblldpctl.so, a library to interface with lldpd. The
      documentation is provided through Doxygen. See src/lib/lldpctl.h
      which contains all the exported functions.
    + Make lldpctl uses liblldpctl.so.
    + Add a "watch" option to lldpctl to monitor neighbor changes.
    + Add the possibility to display the current configuration of
      lldpd with lldpctl. Also add the possibility to reset the
      current transmit delay.

lldpd (0.6)
  * Features:
    + Allow lldpctl to display hidden ports.
    + Add a switch to specify interfaces to use to get chassis ID.