@@ -154,7 +154,8 @@ using a TCP or UDP socket.
 .It Fl c
 Enable the support of CDP protocol to deal with Cisco routers that do
 not speak LLDP. If repeated, CDPv1 packets will be sent even when
-there is no CDP peer detected.
+there is no CDP peer detected. If repeated once again, CDPv2 packets
+will be sent even when there is no CDP peer detected.
 .It Fl f
 Enable the support of FDP protocol to deal with Foundry routers that do
 not speak LLDP. If repeated, FDP packets will be sent even when there
