@@ -5,6 +5,7 @@ lldpd (0.7.2)
     + Lock BPF interfaces before handing them to chrooted process on
       BSD.
     + Limit the number of neighbors for each port to 4 (per protocol).
+    + Force CDPv2 protocol with argument `-ccc`.
   * Fixes:
     + Driver whitelisting is done before checking if an interface has
       a lower interface in Linux.
